# comet_ice_sublimation

./: CITATION.cff  LICENSE  README.md  pyproject.toml
src/comet_ice_sublimation/: comet_ice_sublimation.py  parse_arguments.py
src/comet_ice_sublimation/energy_balance/: __init__.py  energy_balance.py
src/comet_ice_sublimation/heat_of_sublimation/: __init__.py  heat_of_sublimation.py  heat_of_sublimation_carbon_dioxide.py  heat_of_sublimation_carbon_monoxide.py  heat_of_sublimation_result.py  heat_of_sublimation_water.py  heat_of_sublimation_water_methane.py
src/comet_ice_sublimation/model_input/: __init__.py  sublimation_model_input.py
src/comet_ice_sublimation/model_output/: __init__.py  sublimation_model_output.py
src/comet_ice_sublimation/model_runner/: __init__.py  model_runner.py
src/comet_ice_sublimation/model_saver/: __init__.py  model_saver.py
src/comet_ice_sublimation/molecular_species/: __init__.py  molecular_species.py  starting_temperatures.py
src/comet_ice_sublimation/physical_constants/: __init__.py  physical_constants.py
src/comet_ice_sublimation/surface_geometry/: __init__.py  surface_geometry.py
