[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "comet_ice_sublimation"
version = "1.0.0"
authors = [ "Shawn Oset" ]
description = "Rapid rotator model of ice sublimation for comet nuclei"
classifiers = ["Programming Language :: Python :: 3",]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^2.2.2"

[tool.poetry.scripts]
comet_ice = 'comet_ice_sublimation.comet_ice_sublimation:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pyright]
reportAttributeAccessIssue = 'information'
typeCheckingMode = 'basic'
ignore = ["deprecated"]
